fix layout bug

--- a/src/components/gadget/edit/editor/css.styl
+++ b/src/components/gadget/edit/editor/css.styl
@@ -4,14 +4,14 @@ form
 
 vellum-field
 
-  &[type="text"]
-    grid-column span 2
+  // &[type="text"]
+  //   grid-column span 2
   
-  &[type="url"]
-    grid-column span 2
+  // &[type="url"]
+  //   grid-column span 2
 
   &[name="image.url"]
-    grid-column span 2
+    // grid-column span 2
 
     [slot="input"]
       display flex
@@ -26,7 +26,7 @@ vellum-field
           max-inline-size 100%
 
   &[name="icon"]
-    grid-column span 2
+    // grid-column span 2
 
     [slot="input"]
       display flex
@@ -45,7 +45,7 @@ vellum-field
           line-height 4rem
 
   &[name="page"]
-    grid-column span 2
+    // grid-column span 2
 
     & > [slot="input"]
       display flex
@@ -60,7 +60,7 @@ vellum-field
         line-height var(--default-copy-line-height)
 
   &[type="range"]
-    grid-column span 2
+    // grid-column span 2
     datalist
       // order 2
       // flex 1 1 auto
